<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ringlayer.simplestockinventory.MainActivity">

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="96dp"
        android:text="@string/gob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/in"
        android:layout_width="123dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/out"
        android:layout_width="117dp"
        android:layout_height="44dp"
        android:layout_marginEnd="84dp"
        android:layout_marginTop="28dp"
        android:text="@string/out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search"
        android:layout_width="169dp"
        android:layout_height="56dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/search_input"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:background="@color/colorPrimary"
        android:textColor="@color/putih"
        android:id="@+id/data_stok"
        android:layout_width="341dp"
        android:layout_height="289dp"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="6dp"
        android:paddingTop="2dp"
        android:gravity="top"
        android:padding="10dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Stock Data"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
